# AcuClass

./: LICENSE  README.md  acoustic-noise-classifier.ipynb  calculate-speech-metrics.py  config.py  data-preprocessing.py  evaluation.ipynb  requirements.txt
data/: MS-SNSD-classes-synthesizer.py
python/: inference.py
rust/: Cargo.toml
rust/src/: audio_processor.rs  feature_extractor.rs  lib.rs  main.rs  model.onnx  model_inference.rs  scaler.rs  stream_processor.rs
